--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "10.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
-    "@types/react": "^17.0.0",
+    "@types/react": "^18.0.0",
     "typescript": "^4.1.2"
   }
 }
